--- a/sign/inedex.html
+++ b/sign/inedex.html
@@ -1,3 +1,9 @@
+<! DOCTYPE html>
+<html>
+<head>
+<script type="text/javascript" src="hi. js"></script>
+</head>
+<body>
 <h1>
   Draw over image
 </h1>
@@ -9,3 +15,5 @@
   <button id="save">Save</button>
   <button id="clear">Clear</button>
 </div>
+</body>
+</html>
