--- a/sign/inedex.html
+++ b/sign/inedex.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script type="text/javascript" src="hi. js"></script>
+<link rel="stylesheet" type="text/css" href="hi.css">
 </head>
 <body>
 <h1>
