--- a/sign/index.html
+++ b/sign/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="hi.js"></script>
+<script type="text/javascript" src="sign.js"></script>
 <link rel="stylesheet" type="text/css" href="hi.css">
 <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
 </head>
