--- a/Signature/index.html
+++ b/Signature/index.html
@@ -1,5 +1,8 @@
 <! DOCTYPE html>
 <html>
+  <title>
+    Signature
+  </title>
 <head>
 <script type="text/javascript" src="styles.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
