--- a/Signature/index.html
+++ b/Signature/index.html
@@ -10,13 +10,15 @@
 </head>
 <body>
   <div class="wrapper">
+  <h1>
+  Draw over image
+</h1>
+<div class="wrapper">
   <canvas id="signature-pad" class="signature-pad" width=400 height=200></canvas>
 </div>
-
-<button id="save-png">Save as PNG</button>
-<button id="save-jpeg">Save as JPEG</button>
-<button id="save-svg">Save as SVG</button>
-<button id="draw">Draw</button>
-<button id="erase">Erase</button>
-<button id="undo">Undo</button>
-<button id="clear">Clear</button>
+<div>
+  <button id="save">Save</button>
+  <button id="clear">Clear</button>
+</div>
+</body>
+</html>
