--- a/Signature/index.html
+++ b/Signature/index.html
@@ -1,6 +1,9 @@
 <! DOCTYPE html>
 <html>
 <head>
+  <title>
+    Wakar
+  </title>
 <script src="styles.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
 <link rel="stylesheet" href="styles.css">
