--- a/Signature/index.html
+++ b/Signature/index.html
@@ -14,7 +14,7 @@
   Draw over image
 </h1>
 <div class="wrapper">
-  <canvas id="signature-pad" class="signature-pad" width=400 height=200></canvas>
+  <canvas id="signature-pad" class="signature-pad1" width=400 height=200></canvas>
 </div>
 <div>
   <button id="save">Save</button>
